--- a/index.html
+++ b/index.html
@@ -432,7 +432,9 @@
             </g>
           </svg>
         </div>
-        <div class="avatar-div"></div>
+        <div class="avatar-div">
+          <img class="victor-img" src="images/image-victor.jpg" alt="avatar" />
+        </div>
         <div class="middle-div">
           <p class="victor">Victor Crest <span>26</span></p>
           <p class="london">London</p>
